# bond-service

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.local.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
bond_service/core/: admin.py  apps.py  models.py
bond_service/core/api/: exceptions.py  factories.py  serializers.py  views.py
bond_service/core/management/commands/: populate_superuser.py
bond_service/core/migrations/: 0001_initial.py
compose/local/django/: Dockerfile
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
tests/: test_api.py
